feat: resolved warnings and SonarLint suggestions